Add jupyter notebook

--- a/docs/source/selection_clustering.ipynb
+++ b/docs/source/selection_clustering.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Urvalsalgoritm"
+    "# Urvalsalgoritm\n",
+    "Det här är en Jupyter Notebook som använts för att utforska algoritmer för att välja ut vilka klockor man ska lita på. Flera olika algoritmer har testats men i slutändan valde vi att använda den relativt enkla algoritmen från RFC5905 som bara letar efter överlappande tidsspann."
    ]
   },
   {
